Add load requests and xml parser * FIXED xml parser currently